Fix the white gap between navbar and hero image in index.html file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,7 +103,6 @@ body {
 
 /* Hero section */
 #hero {
-    margin-top: 81px;
     height: 400px;
     width: 100%;
     background: url("../images/pexels-64242_resized.png") no-repeat center center/cover;
@@ -254,8 +253,7 @@ img {
 
 #sign_up_form {
     color: #410c31;
-    background-color: rgba(199, 156, 186, 0.5);
-    padding: 30px;
+    padding: 15px;
 }
 
 #sign_up>form {
@@ -266,7 +264,9 @@ img {
     width: 80%;
 }
 
-#sign_up h3{
+#sign_up h3,h2{
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 500;
     padding-bottom: 10px;
 }
 
@@ -291,12 +291,14 @@ img {
 }
 
 .book-button {
-    margin-top: 20px;
+    margin-top: 10px;
     border-radius: 2px;
-    padding: 15px 32px;
+    padding: 15px 30px;
     font-size: 100%;
     background-color: #410c31;
     color: #F3EDCD;
+    display: block;
+    float: right;
 }
 
 /* Footer */
